Added settings w/ theme chooser.
Needs fixed:
-Sometimes data isn't loading into listView on initial run
-Using a blank fragment to refresh the data fragment is pretty hacky

Fixed:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:icon="@drawable/wowtokenicon"
         android:label="@string/app_name"
         android:roundIcon="@drawable/wowtokenicon"
-        android:supportsRtl="true"
-        android:theme="@style/AppThemeNoActionBar">
+        android:supportsRtl="true">
 
         <receiver android:name=".widget.MyWidgetProvider">
             <intent-filter>
