--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.RealmPopup"
+            android:theme="@style/AppThemeRealmPopup"
+
+            />
+
     </application>
 
 </manifest>
