Added widgets, most likely going to do some more research and change how they work, but these will suffice for now.
Needs fixed:
Doing a lot of work on main thread, kind've lags when loading the DataFragment

Fixed:

TODO:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,52 @@
         android:roundIcon="@drawable/wowtokenicon"
         android:supportsRtl="true">
 
-        <receiver android:name=".widget.MyWidgetProvider">
+        <receiver android:name=".widget.NAWidgetProvider"
+            android:label="NA Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+
+        <receiver android:name=".widget.EUWidgetProvider"
+            android:label="EU Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+
+        <receiver android:name=".widget.CNWidgetProvider"
+            android:label="CN Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+
+        <receiver android:name=".widget.TWWidgetProvider"
+            android:label="TW Widget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/widget_info" />
+        </receiver>
+
+        <receiver android:name=".widget.KRWidgetProvider"
+            android:label="KR Widget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
